# Atlys

./: Class diagram.drawio  README.md
Docs/: main.js  style.css
Native/: Cmakelists.txt  Native-UML.drawio  README.md  compile.sh  out
Native/files/: CMakeLists.txt  README.md  gltf_loader  imgui.ini  install.sh
Native/files/include/: camera.h  model.h  shader.h
Native/files/shaders/: model.frag  model.vert
Native/files/src/: camera.cpp  main.cpp  model.cpp  shader.cpp
Native/includes/learnopengl/: model.h
Native/resources/objects/backpack/: backpack.mtl
Native/src/: main.cpp
Resources/Models/: DamagedHelmet.glb
Web/: README.md
Web/private/: index.html  main.js
